--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,7 @@ margin-top: -30px;}
 
 	#the-print-report {
 	display: block;
+	margin: 0 2em;
 	 }
 
 }
@@ -527,30 +528,47 @@ table, th, td {
 }
 
 /* JB styles - 25/09/2018 */
+.report-heading {
+	font-size: 26pt;
+	text-align: center;
+}
 
 .stat-box {
 	border: 1px solid black;
 	width: 25%;
-	padding: 5px 0px 5px 5px;
+	padding: 5px 0px 5px 25px;
 	margin-right: 25px;
 	font-size: 14px;
 }
 
 
 .report-assumptions > li {
-	font-size: 12px;
+	font-size: 14px;
 }
 
 .report-table {
-	font-size: 12px;
+	font-size: 14px;
 }
 
 .report-table__list {
-	font-size: 12px;
+	font-size: 14px;
 }
 
 .report-subtext {
-	font-size: 18px;
+	font-size: 16px;
+}
+
+.small-text {
+	font-size: 14px;
+}
+
+.tiny-text {
+	line-height: 14px;
+	font-size: 14px;
+}
+
+#footer-wrapper {
+	background: transparent !important;
 }
 
 @media print {
@@ -582,18 +600,18 @@ table, th, td {
 .appendix-ii-conditions {
 	list-style-type: lower-alpha;
 	margin-left: 20px;
+	font-size: 12px;
 }
 .appendix-ii-conditions-2 {
 	list-style-type: lower-roman;
 	margin-left: 20px;
+	font-size: 12px;
 }
 p.sub-heading{
 	font-weight: bold;
-	color:#0E2D6D;
 }
 p.sub-heading-indent{
 	font-weight: bold;
-	color:#0E2D6D;
 	margin-left: 20px;
 }
 .reliefs-left {
@@ -610,7 +628,7 @@ p.sub-heading-indent{
 #options-container {
     width: 100%;
     height: 225px;
-    margin: auto;
+    margin: 2em auto;
     padding: 10px;
 }
 
@@ -1359,3 +1377,6 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 	text-align:center;
 }
 
+* {
+	font-family: Arial, Helvetica, sans-serif;
+}
