--- a/css/main.css
+++ b/css/main.css
@@ -357,13 +357,6 @@ table, th, td {
 	margin-right:10px;
 }
 
-.beneficiaries {
-	font-size:18px;
-    line-height: 24px;
-    margin-top: 14px;
-    margin-left: 16px;
-}
-
 .panel-group .panel {
 	border-radius:0px;
 }
@@ -528,9 +521,25 @@ table, th, td {
 }
 
 /* JB styles - 25/09/2018 */
-.report-heading {
+.report-title {
 	font-size: 26pt;
 	text-align: center;
+	text-transform: uppercase;
+}
+
+.report-title__desc {
+	font-size:16px;
+	font-weight: 800;
+}
+
+.report-subtitle {
+	font-size:22pt;
+	line-height:150%;
+	text-align: center;
+}
+
+.headings {
+	font-weight: bold;
 }
 
 .stat-box {
@@ -562,18 +571,26 @@ table, th, td {
 	font-size: 14px;
 }
 
-.tiny-text {
-	line-height: 14px;
-	font-size: 14px;
-}
 
 #footer-wrapper {
 	background: transparent !important;
 }
 
-@media print {
 
+.beneficiaries {
+	font-size:18px;
+    line-height: 24px;
+    margin-top: 14px;
+	margin-left: 16px;
+	color: #ffffff;
 }
+
+@media print {
+	.beneficiaries {
+		color: #ffffff;
+	}
+}
+
 
 /* End JB styles */
 .estate-value-liability-box {
@@ -597,15 +614,25 @@ table, th, td {
 #no-will {
 	border: 1px solid grey;
 }
+.appendix-text {
+	line-height: 1.1;
+}
+
+.appendix-sub {
+	font-weight: 800;
+	font-style: italic;
+
+}
+
 .appendix-ii-conditions {
 	list-style-type: lower-alpha;
 	margin-left: 20px;
-	font-size: 12px;
+	font-size: 14px;
 }
 .appendix-ii-conditions-2 {
 	list-style-type: lower-roman;
 	margin-left: 20px;
-	font-size: 12px;
+	font-size: 14px;
 }
 p.sub-heading{
 	font-weight: bold;
@@ -680,6 +707,7 @@ div#right {
 	background-color:#F7F7F7;
 	padding: 10px;
 }
+
 
 .assets-browser {
 	width: 100%;
@@ -1113,13 +1141,6 @@ label {
     height: .1em;
     background: #5261ac;
     z-index: -1;
-}
-
-.beneficiaries {
-	font-size:12px;
-	line-height: 24px;
-    margin-top: 14px;
-    margin-left: 16px;
 }
 
 .panel-title {
