--- a/css/main.css
+++ b/css/main.css
@@ -512,21 +512,44 @@ table, th, td {
 }
 
 /* JB styles - 25/09/2018 */
+
+.cover-page {
+	padding: 3em;
+	background-color:  #A39B88 !important;
+	border: 2px solid #ffffff;
+	outline: 3px solid #A39B88;
+}
+
 .report-title {
 	font-size: 26pt;
 	text-align: center;
 	text-transform: uppercase;
+	color: #ffffff !important;
+	letter-spacing: 3px;
+	font-weight: 800;
 }
 
 .report-title__desc {
 	font-size:16px;
 	text-align: center;
+	color: #ffffff !important;
 }
 
 .report-subtitle {
-	font-size:22pt;
+	font-size:18pt;
 	line-height:150%;
 	text-align: center;
+	color: #ffffff !important;
+	text-transform: uppercase;
+}
+
+
+.reportNames {
+	color: #ffffff !important;
+}
+
+#today {
+	color: #ffffff !important;
 }
 
 .headings {
