--- a/css/main.css
+++ b/css/main.css
@@ -314,7 +314,7 @@ table, th, td {
 }
 
 .saved-beneficiary {
-	margin-bottom:40px;
+	margin-bottom:20px;
 	cursor:pointer;
 	page-break-inside: avoid;
 }
@@ -689,8 +689,8 @@ p.sub-heading-indent{
 
 #options-container {
     width: 100%;
-    height: 225px;
-    margin: 1em auto;
+    height: 200px;
+    margin: 0 auto;
     padding: 10px;
 }
 
@@ -1311,7 +1311,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 	#options-container {
 		width: 100%;
-		height: 225px;
+		height: 200px;
 		margin: auto;
 		padding: 10px;
 	}
@@ -1362,7 +1362,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 	#options-container {
 		width: 100%;
-		height: 250px;
+		height: 200px;
 		margin: auto;
 		padding: 10px;
 	}
